--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-icons/all-files": "^4.1.0",
     "babel-plugin-styled-components": "^2.1.4",
     "gatsby": "^5.14.0",
+    "gatsby-adapter-netlify": "^1.2.0",
     "gatsby-plugin-image": "^3.14.0",
     "gatsby-plugin-sharp": "^5.14.0",
     "gatsby-plugin-styled-components": "^6.14.0",
